# neat-hop

./: Cargo.toml  README.md
plans/: burn_backend_setup.md
src/: lib.rs  main.rs
tests/: backend_tests.rs
